feat: Update version to 0.2.0 and enhance modular package structure
- Updated SECURITY.md to reflect support for version 0.2.x.
- Refactored bridgebase module to introduce a modular package layout, separating core functionality and database adapters.
- Added core components including BaseSession, GatewayResolver, and ProxyManager for improved database-agnostic infrastructure.
- Implemented Redis and TigerBeetle adapters with session management and native client access.
- Removed deprecated tigerbeetle_types.py module and streamlined type access through the main tigerbeetle namespace.
- Updated example usage in example.py to reflect new import paths.
- Enhanced pyproject.toml with updated dependencies and classifiers for Python versions 3.10 to 3.12.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "bridgebase"
-version = "0.1.0"
+version = "0.2.0"
 description = "Multi-database SDK with gateway socket authentication"
 requires-python = ">=3.10"
 license = { text = "MIT" }
@@ -12,6 +12,9 @@ readme = "README.md"
 
 classifiers = [
   "Programming Language :: Python :: 3",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
   "License :: OSI Approved :: MIT License",
   "Operating System :: OS Independent",
 ]
@@ -21,6 +24,10 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# Individual adapters can be installed separately
+# In the future, this will be replaced with separate packages:
+# pip install bridgebase-redis
+# pip install bridgebase-tigerbeetle
 tigerbeetle = [
     "tigerbeetle==0.16.70",
 ]
@@ -34,9 +41,11 @@ all = [
 dev = [
     "pytest>=7.0",
     "ruff>=0.3",
+    "mypy>=1.0",
 ]
 
 [tool.setuptools.packages.find]
+# Find all packages in bridgebase namespace
 include = ["bridgebase*"]
 
 [tool.ruff]
@@ -46,8 +55,18 @@ line-length = 100
 [tool.ruff.lint]
 select = ["E", "F", "I", "N", "W"]
 
+[tool.ruff.lint.isort]
+combine-as-imports = true
+
+[tool.mypy]
+python_version = "3.10"
+warn_return_any = true
+warn_unused_configs = true
+disallow_untyped_defs = false
+
 [project.urls]
 Homepage = "https://github.com/bridgebase-cloud/bridgebase-py"
 Documentation = "https://github.com/bridgebase-cloud/bridgebase-py"
 Issues = "https://github.com/bridgebase-cloud/bridgebase-py/issues"
+Repository = "https://github.com/bridgebase-cloud/bridgebase-py"
 
